crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_tstring_not_equals.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        StmtExpr {
            node_index: NodeIndex(None),
            range: 0..11,
            value: TString(
                ExprTString {
                    node_index: NodeIndex(None),
                    range: 0..11,
                    value: TStringValue {
                        inner: Single(
                            TString {
                                range: 0..11,
                                node_index: NodeIndex(None),
                                elements: [
                                    Interpolation(
                                        InterpolatedElement {
                                            range: 2..10,
                                            node_index: NodeIndex(None),
                                            expression: Compare(
                                                ExprCompare {
                                                    node_index: NodeIndex(None),
                                                    range: 3..9,
                                                    left: NumberLiteral(
                                                        ExprNumberLiteral {
                                                            node_index: NodeIndex(None),
                                                            range: 3..4,
                                                            value: Int(
                                                                1,
                                                            ),
                                                        },
                                                    ),
                                                    comparisons: [
                                                        (
                                                            NotEq,
                                                            NumberLiteral(
                                                                ExprNumberLiteral {
                                                                    node_index: NodeIndex(None),
                                                                    range: 8..9,
                                                                    value: Int(
                                                                        2,
                                                                    ),
                                                                },
                                                            ),
                                                        ),
                                                    ],
                                                },
                                            ),
                                            debug_text: None,
                                            conversion: None,
                                            format_spec: None,
                                        },
                                    ),
                                ],
                                flags: TStringFlags {
                                    quote_style: Double,
                                    prefix: Regular,
                                    triple_quoted: false,
                                    unclosed: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
