crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_tstring_self_doc_prec_space.snap
---
source: crates/ruff_python_parser/src/string.rs
assertion_line: 808
expression: suite
---
[
    Expr(
        StmtExpr {
            node_index: NodeIndex(None),
            range: 0..10,
            value: TString(
                ExprTString {
                    node_index: NodeIndex(None),
                    range: 0..10,
                    value: TStringValue {
                        inner: Single(
                            TString {
                                range: 0..10,
                                node_index: NodeIndex(None),
                                elements: [
                                    Interpolation(
                                        InterpolatedElement {
                                            range: 2..9,
                                            node_index: NodeIndex(None),
                                            expression: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 3..4,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                            expression_source: "x",
                                            debug_text: Some(
                                                DebugText {
                                                    leading: "",
                                                    expression: "x",
                                                    trailing: "   =",
                                                },
                                            ),
                                            conversion: None,
                                            format_spec: None,
                                        },
                                    ),
                                ],
                                flags: TStringFlags {
                                    quote_style: Double,
                                    prefix: Regular,
                                    triple_quoted: false,
                                    unclosed: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
