crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_u_f_string_concat_1.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
---
Suite {
    range: 0..18,
    node_index: NodeIndex(None),
    statements: [
        Expr(
            StmtExpr {
                node_index: NodeIndex(None),
                range: 0..18,
                value: FString(
                    ExprFString {
                        node_index: NodeIndex(None),
                        range: 0..18,
                        value: FStringValue {
                            inner: Concatenated(
                                [
                                    Literal(
                                        StringLiteral {
                                            range: 0..9,
                                            node_index: NodeIndex(None),
                                            value: "Hello ",
                                            flags: StringLiteralFlags {
                                                quote_style: Single,
                                                prefix: Unicode,
                                                triple_quoted: false,
                                                unclosed: false,
                                            },
                                        },
                                    ),
                                    FString(
                                        FString {
                                            range: 10..18,
                                            node_index: NodeIndex(None),
                                            elements: [
                                                Literal(
                                                    InterpolatedStringLiteralElement {
                                                        range: 12..17,
                                                        node_index: NodeIndex(None),
                                                        value: "world",
                                                    },
                                                ),
                                            ],
                                            flags: FStringFlags {
                                                quote_style: Single,
                                                prefix: Regular,
                                                triple_quoted: false,
                                                unclosed: false,
                                            },
                                        },
                                    ),
                                ],
                            ),
                        },
                    },
                ),
            },
        ),
    ],
}
