crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_u_f_string_concat_2.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
---
Suite {
    range: 0..22,
    node_index: NodeIndex(None),
    statements: [
        Expr(
            StmtExpr {
                node_index: NodeIndex(None),
                range: 0..22,
                value: FString(
                    ExprFString {
                        node_index: NodeIndex(None),
                        range: 0..22,
                        value: FStringValue {
                            inner: Concatenated(
                                [
                                    Literal(
                                        StringLiteral {
                                            range: 0..9,
                                            node_index: NodeIndex(None),
                                            value: "Hello ",
                                            flags: StringLiteralFlags {
                                                quote_style: Single,
                                                prefix: Unicode,
                                                triple_quoted: false,
                                                unclosed: false,
                                            },
                                        },
                                    ),
                                    FString(
                                        FString {
                                            range: 10..18,
                                            node_index: NodeIndex(None),
                                            elements: [
                                                Literal(
                                                    InterpolatedStringLiteralElement {
                                                        range: 12..17,
                                                        node_index: NodeIndex(None),
                                                        value: "world",
                                                    },
                                                ),
                                            ],
                                            flags: FStringFlags {
                                                quote_style: Single,
                                                prefix: Regular,
                                                triple_quoted: false,
                                                unclosed: false,
                                            },
                                        },
                                    ),
                                    Literal(
                                        StringLiteral {
                                            range: 19..22,
                                            node_index: NodeIndex(None),
                                            value: "!",
                                            flags: StringLiteralFlags {
                                                quote_style: Single,
                                                prefix: Empty,
                                                triple_quoted: false,
                                                unclosed: false,
                                            },
                                        },
                                    ),
                                ],
                            ),
                        },
                    },
                ),
            },
        ),
    ],
}
